--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ html, body{
 }
 
 .third-btn{
-    background-color: #FFFFFF;
+    background-color: #FFFFFF; 
     color: #1D53D4;
 }
 
@@ -51,3 +51,51 @@ html, body{
     background-color: #F0F2F3;
     color: #1D53D4;
 }
+
+
+/* navbar */
+.navbar{
+    padding: 5px 0px;
+    background: #1D53D4;
+    border-bottom: 2px solid #9A9D9E;    
+}
+
+.navbar .nav-item a{
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 600;
+    color: #FFFFFF;
+    border-bottom: 2px solid transparent;
+    transform: translateX(-250px);
+}
+
+.navbar .nav-item a:hover{
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 600;
+    color: #FFFFFF;
+    border-bottom: 2px solid #FFFFFF;
+}
+
+.navbar h6{
+    font-size: 16px;
+    font-weight: 400;
+    color: #B1B4B5;
+}
+
+.navbar .nav-contact .nav-call-us a{
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: 700;
+    color: #FFFFFF;
+}
+
+.navbar .nav-contact .nav-call-us{
+    transform: translateY(-20px);
+}
+
+.navbar .nav-contact .nav-call-icon img{
+    transform: translateY(25px);
+    margin-left: -50px;
+}
+/* navbar */
