--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,7 @@ html, body{
 }
 /* home */
 
+
 /* value */
 #value{
     background-color: transparent;
@@ -153,3 +154,40 @@ html, body{
     margin-left: 30px;
 }
 /* value */
+
+
+/* stakes */
+#stakes{
+    padding: 120px 0px;
+}
+
+#stakes h6{
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 1.6px;
+    color: #1D53D4;
+    text-transform: uppercase;
+    margin-bottom: 15px;
+}
+
+#stakes h2{
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 1.20;
+    color: #1C2025;
+    margin-bottom: 20px;
+}
+
+#stakes p{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.625;
+    color: #1C2025;
+    max-width: 98%;
+}
+
+#stakes .stakes-text{
+    margin-bottom: 60px;
+}
+/* stakes */
