--- a/css/style.css
+++ b/css/style.css
@@ -412,3 +412,75 @@ html, body{
     color: #C0C2C4;
 }
 /* work */
+
+
+/* gallery */
+#gallery{
+    padding-top: 120px;
+    padding-bottom: 60px;
+    background-color: #F0F2F3;
+    background-position: cover;
+}
+
+#gallery h6{
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 1.6px;
+    color: #1D53D4;
+    text-transform: uppercase;
+    margin-bottom: 15px;
+}
+
+#gallery h2{
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 1.20;
+    color: #1C2025;
+    margin-bottom: 20px;
+}
+
+#gallery .gallery-body{
+    margin-bottom: 60px;
+}
+
+#gallery h5{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.93;
+    color: #CDCED0;
+    margin-left: 45px;
+    transform: translateY(-100px);
+}
+
+#gallery h4{
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 1.41;
+    color: #FFFFFF;
+    margin-bottom: px;
+    margin-left: 45px;
+    transform: translateY(-110px);
+}
+
+#gallery .gallery-images{
+    position: relative;
+    overflow: hidden;
+}
+
+#gallery .overlay{
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    cursor: pointer;
+    opacity: 0;
+    background: rgba(28, 32, 37, 0.5);
+}
+
+#gallery .gallery-images:hover .overlay{
+    opacity: 0.5;
+}
+/* gallery */
+
