--- a/css/style.css
+++ b/css/style.css
@@ -484,3 +484,71 @@ html, body{
 }
 /* gallery */
 
+
+/* testimonial */
+#testimonial{
+    padding: 120px 0px;
+    background: url(../images/testimonial-bg-image.jpg) no-repeat center;
+    background-position: cover;
+}
+
+#testimonial .testimonial-body{
+    padding: 76px;
+    background-color: #FFFFFF;
+    background-position: cover;
+}
+
+#testimonial .testimonial-quote-icon{
+    margin-bottom: 50px;
+    margin-top: -104px;
+    transform: translateX(-60px);
+}
+
+#testimonial h6{
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 1.6px;
+    color: #1D53D4;
+    text-transform: uppercase;
+    margin-bottom: 15px;
+}
+
+#testimonial h2{
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 1.20;
+    color: #1C2025;
+    margin-bottom: 40px;
+}
+
+#testimonial .testimonial-stars{
+    margin-bottom: 25px;
+}
+
+#testimonial p{
+    font-size: 21px;
+    font-weight: 400;
+    line-height: 1.47;
+    color: #5F6265;
+    margin-bottom: 30px;
+    max-width: 90%;
+}
+
+#testimonial h3{
+    font-size: 21px;
+    font-weight: 600;
+    line-height: 1.23;
+    color: #1C2025;
+    margin-bottom: 0px;
+}
+
+#testimonial h4{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.625;
+    color: #5F6265;
+    letter-spacing: 0.32px;
+    margin-bottom: 40px;
+}
+/* testimonial */
