--- a/css/style.css
+++ b/css/style.css
@@ -552,3 +552,46 @@ html, body{
     margin-bottom: 40px;
 }
 /* testimonial */
+
+
+/* about */
+#about{
+    padding-top: 120px;
+    padding-bottom: 140px;
+}
+
+#about .about-small-image{
+    margin-top: -185px;
+    transform: translateX(432px);
+}
+
+#about h6{
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 1.6px;
+    color: #1D53D4;
+    text-transform: uppercase;
+    margin-bottom: 15px;
+}
+
+#about h2{
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 1.20;
+    color: #1C2025;
+    margin-bottom: 20px;
+}
+
+#about p{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.625;
+    color: #1C2025;
+    margin-bottom: 40px;
+}
+
+#about .about-points{
+    margin-bottom: 50px;
+}
+/* about */
