--- a/css/style.css
+++ b/css/style.css
@@ -595,3 +595,29 @@ html, body{
     margin-bottom: 50px;
 }
 /* about */
+
+
+/* subscribe */
+#subscribe{
+    padding: 120px;
+    background: #1D53D4;
+    background-position: cover;
+}
+
+#subscribe h2{
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 1.20;
+    color: #FFFFFF;
+    margin-bottom: 20px;
+}
+
+#subscribe p{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.625;
+    color: #DBE4F8;
+    margin-bottom: 60px;
+    max-width: 80%;
+}
+/* subscribe */
